# DogFactsInc

./: README.md  azure-pipelines.yml
app/: Dockerfile  app.py  pyproject.toml  secrets.json
