[tool.poetry]
name = "dogfactsinc"
version = "0.1.0"
description = ""
authors = ["Andre Elizondo <andre@elizondo.haus>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
